--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
     <string name="crime_title_hint">Enter a title for a crime.</string>
+    <string name="crime_title_label">Title</string>
+    <string name="crime_detail_label">Detail</string>
+    <string name="crime_solved_label">Solved</string>
 </resources>
