--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,16 @@
     <string name="subtitle_format">%1$s crimes</string>
     <string name="delete_crimes">delete crime</string>
     <string name="no_crimes">No Crimes to Display</string>
+    <string name="crime_suspect_test">Choose suspect</string>
+    <string name="crime_report_text">Send Crime Report</string>
+    <string name="crime_report"> %1$s! The crime was discovered on %2$s. %3$s, and %4$s </string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is unsolved</string>
+    <string name="crime_report_no_suspect">there is no suspect</string>
+    <string name="crime_report_suspect">the suspect is %s</string>
+    <string name="crime_report_subject">CriminalIntent Crime Report</string>
+    <string name="send_report">Send Crime Report via</string>
+
     <plurals name="subtitle_plural">
         <item quantity="one">%1$s crime</item>
         <item quantity="other">%1$s crimes</item>
